# rook-servicechannel-console-ui

./: .gitmodules  AGENTS.md  CMakeLists.txt  Makefile  README.md
adapters/: UnixDomainAgentPort.cpp  UnixDomainAgentPort.hpp
app/: AppConfig.hpp  AppPaths.cpp  AppPaths.hpp  Application.cpp  Application.hpp  CommandLine.cpp  CommandLine.hpp  FocusEngine.cpp  FocusEngine.hpp  InputCommand.hpp  Intent.cpp  Intent.hpp  NavigationSession.cpp  NavigationSession.hpp  PreviewRegistry.cpp  PreviewRegistry.hpp  RuntimeMode.hpp  RuntimeState.cpp  RuntimeState.hpp  ScreenRegistry.cpp  ScreenRegistry.hpp  TerminalInput.cpp  TerminalInput.hpp  TextResources.cpp  TextResources.hpp  UiSettings.cpp  UiSettings.hpp  main.cpp
components/: UiModels.hpp
docs/: briefing-zentrale-ui-library.txt  rook-ui-konzept.md
packaging/nfpm/: rook-console-integration.yaml.in  rook-console-ui.yaml.in
packaging/nfpm/scripts/: rook-console-integration-postinstall.sh
packaging/rootfs/etc/default/: rook-console-integration
packaging/rootfs/usr/lib/rook-console-ui/scripts/: ensure-emulationstation-rook.sh
packaging/rootfs/usr/share/rook-console-ui/emulationstation/roms/: Service.sh
plans/: 00-plan-index.md  01-projektgrundlage-und-app-shell.md  02-rendering-theme-und-preview.md  02a-rmlui-ins-projekt-einbetten.md  02b-sdl2-und-rmlui-grafikintegration.md  03-navigation-fokus-und-standardkomponenten.md  04-setup-flow-und-produkt-screens.md  04b-echte-screens-und-preview-gleichlauf.md  05-agent-anbindung-und-laufzeitlogik.md  06-integration-polish-und-abnahme.md  07-debian-paketierung-und-emulationstation-integration.md
ports/: AgentPort.hpp
render/: BackendInfo.cpp  BackendInfo.hpp  RmlUiRenderer.cpp  RmlUiRenderer.hpp  ScreenModel.hpp  TerminalRenderer.cpp  TerminalRenderer.hpp
resources/text/: welcome.txt
screens/: DisconnectErrorScreen.cpp  DisconnectErrorScreen.hpp  DisconnectWaitScreen.cpp  DisconnectWaitScreen.hpp  KeyboardScreen.cpp  KeyboardScreen.hpp  PlaceholderScreen.cpp  PlaceholderScreen.hpp  Screen.hpp  StatusScreen.cpp  StatusScreen.hpp  VpnErrorScreen.cpp  VpnErrorScreen.hpp  VpnWaitScreen.cpp  VpnWaitScreen.hpp  WelcomeScreen.cpp  WelcomeScreen.hpp  WifiErrorScreen.cpp  WifiErrorScreen.hpp  WifiListScreen.cpp  WifiListScreen.hpp  WifiScanScreen.cpp  WifiScanScreen.hpp  WifiWaitScreen.cpp  WifiWaitScreen.hpp
theme/: Theme.cpp  Theme.hpp
